# cs7643_lod

./: .gitignore  README.md  configs.py  custom_dataset.py  evaluation_coco.py  evaluation_panoptic.py  evaluation_standard.py  main.py  model_config.py  pyproject.toml  requirements.txt
DL_files/: bosch2json.py  configs.py  lisa_change_structure.py  main_DETR_inference.py  main_DETR_training.py  splitNcombine_json.py  template_main.py
DL_files/sample_test/: custom_train.json
YOLOS/: yoloS.py  yoloS_inference.py  yoloS_test.py
traffic-light-detection/utils/: data_utils.py
yolo/: yolo.py  yolo.yaml  yolo_test.yaml  yolo_train.yaml  yolov8-modified.yaml
yolo/utils/: data_utils.py
