[tool.poetry]
name = "cs7643-lod"
version = "0.1.0"
description = "Traffic light detection using deep learning"
authors = ["Bryce Smith <brycegsmith@hotmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.26.4"
torch = "^2.2.2"
ultralytics = "^8.2.0"
ipykernel = "^6.29.4"
setuptools = "^69.5.1"
gitpython = "^3.1.43"
wheel = "^0.43.0"
lxml = "^5.2.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
